<resources>
    <string name="app_name">React</string>
    <string name="ready">Ready…</string>
    <string name="tap">Tap</string>
    <string name="start">Start</string>
    <string name="go">Go!</string>
    <string name="computerButton">Computer button</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="tournament">Tournament</string>
    <string name="shop">Shop</string>
    <string name="duels">Duels</string>
    <string name="playWithFriend">Play with friend</string>
    <string name="enemyImageView">Enemy imageView</string>
    <string name="play">Play</string>
    <string name="buy">Buy</string>
</resources>
